--- a/webui/templates/block.jinja2
+++ b/webui/templates/block.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Block {{ block.header.metadata.height }} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Block {% if is_canonical %}{{ block.header.metadata.height }}{% else %}{{ block_hash_trunc }}{% endif %} - Haruka's Aleo Explorer{% endblock %}
 
 {% block head %}
     <style>
@@ -34,7 +34,7 @@
     <div class="content">
 
         <div id="header">
-            <h3>Block {{ block.header.metadata.height }}</h3>
+            <h3>Block {% if is_canonical %}{{ block.header.metadata.height }}{% else %}{{ block_hash_trunc }}{% endif %}</h3>
         </div>
 
         {% if testnet2_bug %}
