--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -67,6 +67,7 @@
 
         .mono {
             font-family: monospace;
+            font-size: 0.75rem;
         }
     </style>
     {% block head %}{% endblock %}
@@ -79,6 +80,7 @@
             <ul class="menu">
                 <li class="menu-text">Haruka's Aleo Explorer</li>
                 <li><a href="/">Home</a></li>
+                <li><a href="/blocks">Blocks</a></li>
                 <li><a href="/nodes">Nodes</a></li>
             </ul>
         </div>
