--- a/webui/templates/blocks.jinja2
+++ b/webui/templates/blocks.jinja2
@@ -67,7 +67,7 @@
                         <td>{{ block.transactions }}</td>
                         <td>{{ block.transitions }}</td>
                         <td class="mono"><a href="/address?a={{ block.owner }}">{{ block.owner_trunc }}</a></td>
-                        <td><a href="/orphan?h={{ block.height }}">{{ block.orphan_count }}</a></td>
+                        <td>{% if block.orphan_count %}<a href="/orphan?h={{ block.height }}">{{ block.orphan_count }}</a>{% else %}{{ block.orphan_count }}{% endif %}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
