--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -35,6 +35,7 @@
             max-width: 1280px;
             margin: auto;
             padding: 8px;
+            font-size: 0.875rem;
         }
 
         #search {
@@ -67,7 +68,7 @@
 
         .mono {
             font-family: monospace;
-            font-size: 0.75rem;
+            font-size: 0.825rem;
         }
     </style>
     {% block head %}{% endblock %}
@@ -89,8 +90,7 @@
                 <!--suppress HtmlUnknownTag -->
                 <form id="search" action="/search">
                     <div class="input-group">
-                        <input class="input-group-field" type="search" name="q"
-                                placeholder="Search (block height, object id, object id prefix)">
+                        <input class="input-group-field" type="search" name="q" value="{{ query }}" placeholder="Search (block height, object id, object id prefix)">
                         <div class="input-group-button">
                             <button type="submit" class="button">Search</button>
                         </div>
@@ -103,7 +103,7 @@
 {% block content %}{% endblock %}
 <div class="footer-container">
     <div class="footer">
-        Footer!
+        <a href="https://github.com/HarukaMa/aleo-explorer">Open source</a> Aleo explorer made by Haruka.{% if "CLOUDFLARE" | get_env %} Contains CloudFlare analytics.{% endif %}
     </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
