--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -50,7 +50,7 @@
                 <div class="cell large-auto ticker-cell">
                     <div class="grid-y ticker-cell-content">
                         <div class="cell ticker-cell-title">Timestamp</div>
-                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.timestamp }}</div>
+                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.timestamp | format_time }}</div>
                     </div>
                 </div>
                 <div class="cell large-auto ticker-cell">
@@ -87,7 +87,7 @@
                 {% for block in recent_blocks %}
                     <tr>
                         <td><a href="/block?bh={{ block.block_hash }}">{{ block.height }}</a></td>
-                        <td>{{ block.timestamp }}</td>
+                        <td>{{ block.timestamp | format_time }}</td>
                         <td>{{ block.transactions }}</td>
                         <td>{{ block.transitions }}</td>
                         <td class="mono"><a href="/address?a={{ block.owner }}">{{ block.owner }}</a></td>
