--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -82,6 +82,7 @@
                 <li class="menu-text">Haruka's Aleo Explorer</li>
                 <li><a href="/">Home</a></li>
                 <li><a href="/blocks">Blocks</a></li>
+                <li><a href="/leaderboard">Leaderboard</a></li>
                 <li><a href="/nodes">Nodes</a></li>
             </ul>
         </div>
