--- a/webui/templates/leaderboard.jinja2
+++ b/webui/templates/leaderboard.jinja2
@@ -13,7 +13,12 @@
     <div class="content">
 
         <div id="header">
-            <h3>Blocks</h3>
+            <h3>Leaderboard</h3>
+        </div>
+
+        <div class="callout alert">
+            The network is <em>NOT INCENTIVIZED</em> at this moment. The leaderboard below carries no value. <br>
+            Only use it to confirm that your node is running correctly.
         </div>
 
         <div id="blocks">
