--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -63,7 +63,7 @@
                 </div>
                 <div class="cell large-auto ticker-cell">
                     <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Timestamp</div>
+                        <div class="cell ticker-cell-title">Timestamp (UTC)</div>
                         <div class="cell auto ticker-cell-data timestamp-font-size">{{ latest_block.header.metadata.timestamp | format_time }}</div>
                     </div>
                 </div>
