add timezone display toggle

--- a/webui/templates/address.jinja2
+++ b/webui/templates/address.jinja2
@@ -89,7 +89,7 @@
                     <tr>
                         <td><a href="/block?h={{ solution.height }}">{{ solution.height }}</a></td>
                         <td>{{ solution.height // 256 }}</td>
-                        <td>{{ solution.timestamp | format_time }}</td>
+                        <td>{{ solution.timestamp | format_time | safe }}</td>
                         <td>{{ solution.nonce }}</td>
                         <td>{{ solution.target }}<span class="note"> / {{ solution.target_sum }}</span></td>
                         <td>{{ solution.reward | format_aleo_credit }}</td>
