--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -38,6 +38,13 @@
             font-size: 0.875rem;
         }
 
+        .settings {
+            max-width: 1280px;
+            margin: auto;
+            padding: 8px;
+            font-size: 0.875rem;
+        }
+
         #search {
             width: 100%;
         }
@@ -103,6 +110,9 @@
 </div>
 {% block content %}{% endblock %}
 <div class="footer-container">
+    <div class="settings">
+        Timezone display: <a onclick="toggle_timezone()"><span id="timezone-setting"></span></a>
+    </div>
     <div class="footer">
         <a href="https://github.com/HarukaMa/aleo-explorer">Open source</a> Aleo explorer made by Haruka.{% if "CLOUDFLARE" | get_env %} Contains CloudFlare analytics.{% endif %}
     </div>
@@ -114,7 +124,53 @@
         integrity="sha512-+CnEgueYRDzx2s3IIAOpZd8HeOfrSbK3loeHw0jXJODAe3eFROHpBxEsun2kU+sZCaoAA0eFJrhfVV3RGG50GA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-    $(document).foundation();
+    $(document).foundation()
+
+    function utc_to_local() {
+        const times = $(".time")
+        for (const time of times) {
+            const text = time.innerText
+            const date = new Date(Date.parse(text.replace(" ", "T") + "Z"))
+            time.innerText = `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, '0')}-${date.getDate().toString().padStart(2, '0')} ${date.getHours().toString().padStart(2, '0')}:${date.getMinutes().toString().padStart(2, '0')}:${date.getSeconds().toString().padStart(2, '0')}`
+        }
+    }
+
+    function local_to_utc() {
+        const times = $(".time")
+        for (const time of times) {
+            const text = time.innerText
+            const date = new Date(text)
+            time.innerText = `${date.getUTCFullYear()}-${(date.getUTCMonth() + 1).toString().padStart(2, '0')}-${date.getUTCDate().toString().padStart(2, '0')} ${date.getUTCHours().toString().padStart(2, '0')}:${date.getUTCMinutes().toString().padStart(2, '0')}:${date.getUTCSeconds().toString().padStart(2, '0')}`
+        }
+    }
+
+    function toggle_timezone() {
+        if (localStorage.getItem("timezone") === "local") {
+            localStorage.setItem("timezone", "utc")
+            $("#timezone-setting").text("UTC")
+            local_to_utc()
+        } else {
+            localStorage.setItem("timezone", "local")
+            $("#timezone-setting").text("Local")
+            utc_to_local()
+        }
+    }
+
+
+    let timezone_setting = localStorage.getItem("timezone")
+    if (timezone_setting === null) {
+        timezone_setting = "local"
+        localStorage.setItem("timezone", "local")
+    }
+
+    if (timezone_setting === "local") {
+        utc_to_local()
+        $("#timezone-setting").text("Local")
+    } else {
+        $("#timezone-setting").text("UTC")
+    }
+
+
 </script>
 </body>
 </html>
