--- a/webui/templates/block.jinja2
+++ b/webui/templates/block.jinja2
@@ -62,7 +62,7 @@
                     Timestamp
                 </div>
                 <div class="cell auto data-line-value">
-                    {{ block.header.metadata.timestamp | format_time }}
+                    {{ block.header.metadata.timestamp | format_time | safe }}
                 </div>
             </div>
             <div class="data-line grid-x grid-padding-x">
