--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -63,8 +63,8 @@
                 </div>
                 <div class="cell large-auto ticker-cell">
                     <div class="grid-y ticker-cell-content">
-                        <div class="cell ticker-cell-title">Timestamp (UTC)</div>
-                        <div class="cell auto ticker-cell-data timestamp-font-size">{{ latest_block.header.metadata.timestamp | format_time }}</div>
+                        <div class="cell ticker-cell-title">Timestamp</div>
+                        <div class="cell auto ticker-cell-data timestamp-font-size">{{ latest_block.header.metadata.timestamp | format_time | safe }}</div>
                     </div>
                 </div>
                 <div class="cell large-auto ticker-cell">
@@ -103,7 +103,7 @@
                 {% for block in recent_blocks %}
                     <tr>
                         <td><a href="/block?h={{ block.height }}">{{ block.height }}</a></td>
-                        <td>{{ block.timestamp | format_time }}</td>
+                        <td>{{ block.timestamp | format_time | safe }}</td>
                         <td>{{ block.transactions }}</td>
                         <td>{{ block.proof_target }}</td>
                         <td>{{ block.coinbase_target }}</td>
