--- a/webui/templates/orphan.jinja2
+++ b/webui/templates/orphan.jinja2
@@ -31,7 +31,7 @@
                 {% for block in blocks %}
                     <tr>
                         <td class="mono"><a href="/block?bh={{ block.block_hash }}">{{ block.block_hash_trunc }}</a></td>
-                        <td>{{ block.timestamp | format_time }}</td>
+                        <td>{{ block.timestamp | format_time | safe}}</td>
                         <td>{{ block.transactions }}</td>
                         <td>{{ block.transitions }}</td>
                         <td class="mono"><a href="/address?a={{ block.owner }}">{{ block.owner_trunc }}</a></td>
