--- a/webui/templates/leaderboard.jinja2
+++ b/webui/templates/leaderboard.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Blocks - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Leaderboard - Haruka's Aleo Explorer{% endblock %}
 
 {% block head %}
     <style>
