--- a/webui/templates/block.jinja2
+++ b/webui/templates/block.jinja2
@@ -1,6 +1,6 @@
 {% extends "base.jinja2" %}
 
-{% block title %}Block {% if is_canonical %}{{ block.header.metadata.height }}{% else %}{{ block_hash_trunc }}{% endif %} - Haruka's Aleo Explorer{% endblock %}
+{% block title %}Block {{ block.header.metadata.height }} - Haruka's Aleo Explorer{% endblock %}
 
 {% block head %}
     <style>
@@ -34,17 +34,8 @@
     <div class="content">
 
         <div id="header">
-            <h3>Block {% if is_canonical %}{{ block.header.metadata.height }}{% else %}{{ block_hash_trunc }}{% endif %}</h3>
+            <h3>Block {{ block.header.metadata.height }}</h3>
         </div>
-
-        {% if testnet2_bug %}
-            <div class="callout warning">
-                <p>This block is affected by <a href="https://github.com/AleoHQ/snarkOS/issues/1800">a snarkOS bug.</a>
-                </p>
-                <p><em>If you are the miner:</em> You should restart your operator / miner node to clear the mempool.
-                </p>
-            </div>
-        {% endif %}
 
         <div id="data">
             <!-- Keeping this verbose but need a way to simplify it -->
@@ -55,6 +46,14 @@
                 </div>
                 <div class="cell auto data-line-value">
                     {{ block.header.metadata.height }}
+                </div>
+            </div>
+            <div class="data-line grid-x grid-padding-x">
+                <div class="cell small-3 block-data-line-label">
+                    Epoch
+                </div>
+                <div class="cell auto data-line-value">
+                    {{ block.header.metadata.height // 256 }}
                 </div>
             </div>
             <div class="data-line grid-x grid-padding-x">
@@ -70,44 +69,31 @@
                     Confirmations
                 </div>
                 <div class="cell auto data-line-value">
-                    {% if is_canonical %}
-                        {{ confirmations }}
-                    {% else %}
-                        <span class="text-alert">Orphaned</span>
-                    {% endif %}
+                    {{ confirmations }}
                 </div>
             </div>
             <div class="data-line grid-x grid-padding-x">
                 <div class="cell small-3 block-data-line-label">
-                    Difficulty target
+                    Coinbase target
                 </div>
                 <div class="cell auto data-line-value">
-                    {{ block.header.metadata.difficulty_target }}
+                    {{ block.header.metadata.coinbase_target }}
                 </div>
             </div>
             <div class="data-line grid-x grid-padding-x">
                 <div class="cell small-3 block-data-line-label">
-                    Cumulative weight
+                    Proof target
                 </div>
                 <div class="cell auto data-line-value">
-                    {{ block.header.metadata.cumulative_weight }}
+                    {{ block.header.metadata.proof_target }}
                 </div>
             </div>
             <div class="data-line grid-x grid-padding-x">
                 <div class="cell small-3 block-data-line-label">
-                    Miner
+                    Coinbase reward
                 </div>
                 <div class="cell auto data-line-value">
-                    <a href="/address?a={{ owner }}"><span class="mono">{{ owner }}</span></a>
-                </div>
-            </div>
-            <div class="data-line grid-x grid-padding-x">
-                <div class="cell small-3 block-data-line-label">
-                    Mining reward
-                </div>
-                <div class="cell auto data-line-value">
-                    {{ "%.6f" % mining_reward.credit() }} Aleo Credits
-                    {% if fee > 0 %} (fee: {{ "%.6f" % fee.credit() }} Aleo Credits{% if burned %}, burned {{ "%.6f" % burned.credit() }} Aleo Credits{% endif %}){% endif %}
+                    {% if coinbase_reward %}{{ coinbase_reward | format_aleo_credit }}{% else %}-{% endif %}
                 </div>
             </div>
             <div class="data-line grid-x grid-padding-x">
@@ -120,6 +106,22 @@
             </div>
             <div class="data-line grid-x grid-padding-x">
                 <div class="cell small-3 block-data-line-label">
+                    Previous block hash
+                </div>
+                <div class="cell auto data-line-value">
+                    <a href="/block?bh={{ block.previous_hash }}"><span class="mono">{{ block.previous_hash }}</span></a>
+                </div>
+            </div>
+            <div class="data-line grid-x grid-padding-x">
+                <div class="cell small-3 block-data-line-label">
+                    Previous state root
+                </div>
+                <div class="cell auto data-line-value">
+                    <span class="mono">{{ block.header.previous_state_root }}</span>
+                </div>
+            </div>
+            <div class="data-line grid-x grid-padding-x">
+                <div class="cell small-3 block-data-line-label">
                     Transactions root
                 </div>
                 <div class="cell auto data-line-value">
@@ -128,47 +130,10 @@
             </div>
             <div class="data-line grid-x grid-padding-x">
                 <div class="cell small-3 block-data-line-label">
-                    Ledger root
+                    Coinbase accumulator point
                 </div>
                 <div class="cell auto data-line-value">
-                    {% if ledger_root %}
-                        <span class="mono">{{ ledger_root }}</span>
-                    {% else %}
-                        Unknown&nbsp;
-                        <span data-tooltip title="This explorer is not actively calculating the ledger root for every possible block due to various reasons.">?</span>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="data-line grid-x grid-padding-x">
-                <div class="cell small-3 block-data-line-label">
-                    Previous block hash
-                </div>
-                <div class="cell auto data-line-value">
-                    <a href="/block?bh={{ block.previous_block_hash }}"><span class="mono">{{ block.previous_block_hash }}</span></a>
-                </div>
-            </div>
-            <div class="data-line grid-x grid-padding-x">
-                <div class="cell small-3 block-data-line-label">
-                    Previous ledger root
-                </div>
-                <div class="cell auto data-line-value">
-                    <span class="mono">{{ block.header.previous_ledger_root }}</span>
-                </div>
-            </div>
-            <div class="data-line grid-x grid-padding-x">
-                <div class="cell small-3 block-data-line-label">
-                    Nonce
-                </div>
-                <div class="cell auto data-line-value">
-                    <span class="mono">{{ block.header.nonce }}</span>
-                </div>
-            </div>
-            <div class="data-line grid-x grid-padding-x">
-                <div class="cell small-3 block-data-line-label">
-                    Proof
-                </div>
-                <div class="cell auto data-line-value">
-                    <span class="mono">{{ block.header.proof }}</span>
+                    <span class="mono">{{ block.header.coinbase_accumulator_point }}</span>
                 </div>
             </div>
         </div>
@@ -179,16 +144,16 @@
                 <thead>
                 <tr>
                     <td>Transaction ID</td>
+                    <td>Type</td>
                     <td>Transitions</td>
-                    <td>Value balance</td>
                 </tr>
                 </thead>
                 <tbody>
                 {% for tx in transactions %}
                     <tr>
                         <td class="mono"><a href="/transaction?id={{ tx.tx_id }}">{{ tx.tx_id }}</a></td>
-                        <td>{{ tx.transitions }}</td>
-                        <td>{{ "%.6f" % tx.balance.credit() }}</td>
+                        <td>{{ tx.type }}</td>
+                        <td>{{ tx.transitions_count }}</td>
                     </tr>
                 {% endfor %}
                 </tbody>
