--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -41,7 +41,7 @@
         .settings {
             max-width: 1280px;
             margin: auto;
-            padding: 8px;
+            padding: 32px 8px 8px 8px;
             font-size: 0.875rem;
         }
 
