update db query and pages

--- a/webui/templates/address.jinja2
+++ b/webui/templates/address.jinja2
@@ -98,7 +98,7 @@
                 </tbody>
             </table>
             {% if total_solutions > 30 %}
-            <a href="/address_solution?a={{ address }}">Show full list</a>
+            <a href="/address_solution?a={{ address }}">Show all accepted solutions</a>
             {% endif %}
         </div>
 
