--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -90,6 +90,7 @@
                 <thead>
                 <tr>
                     <th>Height</th>
+                    <th>Epoch</th>
                     <th>Timestamp</th>
                     <th>Transactions</th>
                     <th>Proof target</th>
@@ -103,12 +104,13 @@
                 {% for block in recent_blocks %}
                     <tr>
                         <td><a href="/block?h={{ block.height }}">{{ block.height }}</a></td>
+                        <td>{{ block.height // 256 }}</td>
                         <td>{{ block.timestamp | format_time | safe }}</td>
-                        <td>{{ block.transactions }}</td>
+                        <td>{{ block.transaction_count }}</td>
                         <td>{{ block.proof_target }}</td>
                         <td>{{ block.coinbase_target }}</td>
-                        <td>{{ block.coinbase_rewards | format_aleo_credit }}</td>
-                        <td>{{ block.coinbase_solutions }}</td>
+                        <td>{% if block.coinbase_reward %}{{ block.coinbase_reward | format_aleo_credit }}{% else %}-{% endif %}</td>
+                        <td>{% if block.coinbase_reward %}{{ block.partial_solution_count }}{% else %}-{% endif %}</td>
                         <td>-</td>
                     </tr>
                 {% endfor %}
