--- a/webui/templates/address.jinja2
+++ b/webui/templates/address.jinja2
@@ -8,24 +8,7 @@
         #data {
             margin: 20px 4px;
         }
-
-        .data-line {
-            padding: 10px 0;
-            border-bottom: 1px solid #ccc;
-        }
-
-        .data-line-value {
-            overflow-wrap: break-word;
-        }
-
-        .tooltip {
-            max-width: 250px;
-        }
-
-        .text-alert {
-            color: #cc4b37;
-        }
-
+        
         .note {
             font-size: 0.75rem;
             color: #999;
@@ -45,30 +28,18 @@
 
         <div id="data">
             <h4>Overview</h4>
-            <div class="data-line grid-x grid-padding-x">
-                <div class="cell small-3 block-data-line-label">
-                    Address
-                </div>
-                <div class="cell auto data-line-value">
-                    <span class="mono">{{ address }}</span>
-                </div>
-            </div>
-            <div class="data-line grid-x grid-padding-x">
-                <div class="cell small-3 block-data-line-label">
-                    Total phase 2 rewards (not incentivized)
-                </div>
-                <div class="cell auto data-line-value">
-                    {{ total_rewards | format_aleo_credit }}
-                </div>
-            </div>
-            <div class="data-line grid-x grid-padding-x">
-                <div class="cell small-3 block-data-line-label">
-                    Total solutions found
-                </div>
-                <div class="cell auto data-line-value">
-                    {{ total_solutions }}
-                </div>
-            </div>
+            <data-line>
+                <span slot="title">Address</span>
+                <span slot="content"><span class="mono">{{ address }}</span></span>
+            </data-line>
+            <data-line>
+                <span slot="title">Total phase 2 rewards (not incentivized)</span>
+                <span slot="content">{{ total_rewards | format_aleo_credit }}</span>
+            </data-line>
+            <data-line>
+                <span slot="title">Total solutions found</span>
+                <span slot="content">{{ total_solutions }}</span>
+            </data-line>
         </div>
 
         <div id="solutions">
