--- a/webui/templates/transaction.jinja2
+++ b/webui/templates/transaction.jinja2
@@ -32,7 +32,7 @@
             </data-line>
             <data-line>
                 <span slot="title">Block</span>
-                <span slot="content"><a href="/block?h={{ block.header.metadata.height }}">{{ block.header.metadata.height }}</a> ({{ confirmations }} confirmations)</span>
+                <span slot="content"><a href="/block?h={{ block.header.metadata.height }}">{{ block.header.metadata.height }}</a></span>
             </data-line>
             <data-line>
                 <span slot="title">Inner circuit ID</span>
