--- a/webui/templates/address.jinja2
+++ b/webui/templates/address.jinja2
@@ -44,7 +44,7 @@
                 <span slot="title">Estimated speed</span>
                 <span slot="content">
                     {% if speed != 0 %}
-                    {{ speed }} <span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span> (last {{ timespan }})
+                    {{ "%.2f" % speed }} <span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span> (last {{ timespan }})
                     {% else %}
                     Not enough solutions during last day
                     {% endif %}
