--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -28,12 +28,12 @@
             max-width: 250px;
         }
 
-        .has-tip {
-            height: 20px;
+        .has-tip{
+            font-weight: normal;
         }
 
         .timestamp-font-size {
-            font-size: 1.35rem;
+            font-size: 1.3rem;
         }
 
     </style>
@@ -81,6 +81,12 @@
                 </div>
             </div>
             <div class="grid-x grid-padding-x">
+                <div class="cell large-auto ticker-cell">
+                    <div class="grid-y ticker-cell-content">
+                        <div class="cell ticker-cell-title">Estimated network speed (5m)</div>
+                        <div class="cell auto ticker-cell-data">{{ "%.2f" % network_speed }}&nbsp;<span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
+                    </div>
+                </div>
             </div>
         </div>
 
